Playing with Slim

--- a/genderForm.html
+++ b/genderForm.html
@@ -8,8 +8,8 @@ window.location=document.getElementById("gender").value
 <select id="gender" onchange="go()">
       
     <option selected>Choose Gender</option>
-<option value="http://localhost:8888/cycleatlanta/slim_dir/index.php/retrieve/male">Male</option>
-<option value="http://localhost:8888/cycleatlanta/slim_dir/index.php/retrieve/female">Female</option>
+<option value="/index.php/retrieve/male">Male</option>
+<option value="/index.php/retrieve/female">Female</option>
 </select>
 </form>
 
