Prettier postTest page for demo purposes

--- a/postTest.html
+++ b/postTest.html
@@ -2,18 +2,28 @@
 
 <input type="submit" value="submit" onclick="javascript:document.myform.submit()">
 <form action="index.php/users/user" method="post" name="myform">
-<input name="device" value="a0d546c1224dfe5fb192e28837ab0447f01be3d6" />
-<input name="email" value="none" />
-<input name="gender" value="1" />
-<input name="income" value="1" />
-<input name="ethnicity" value="1" />
-<input name="homeZIP" value="30032" />
-<input name="schoolZIP" value="30032" />
-<input name="workZIP" value="30032" />
-<input name="cycling_freq" value="1" />
-<input name="rider_history" value="1" />
-<input name="rider_type" value="1" />
-<input name="app_version" value="1.0" />
+Email:
+<input name="email" value="none" /> <br>
+Gender:
+<input name="gender" value="1" /> <br>
+Income:
+<input name="income" value="1" /> <br>
+Ethnicity:
+<input name="ethnicity" value="1" /> <br>
+Home Zip:
+<input name="homeZIP" value="30032" /> <br>
+School Zip:
+<input name="schoolZIP" value="30032" /> <br>
+Work Zip:
+<input name="workZIP" value="30032" /> <br>
+Cycling Frequency:
+<input name="cycling_freq" value="1" /> <br>
+Rider History:
+<input name="rider_history" value="1" /> <br>
+Rider Type:
+<input name="rider_type" value="1" /> <br>
+App Version:
+<input name="app_version" value="1.0" /> <br>
 </form>
 
 
