--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 
 POST Test (for user):<br>
 <input type="submit" value="submit" onclick="javascript:document.myform.submit()">
-<form action="index.php/users/user" method="post" name="myform">
+<form action="index.php/register" method="post" name="myform">
 Email:
 <input name="email" value="none" /> <br>
 Password:
