--- a/register.html
+++ b/register.html
@@ -1,5 +1,5 @@
 
-POST Test (for user):<br>
+Register a new user<br>
 <input type="submit" value="submit" onclick="javascript:document.myform.submit()">
 <form action="index.php/register" method="post" name="myform">
 Email:
