Finished user profile section for demo

--- a/portal.html
+++ b/portal.html
@@ -61,9 +61,7 @@
 			<strong>School Zipcode:</strong> <p id="sZIP"></p> <br>
 			<strong>Cycling Frequency:</strong> <p id="cFREQ"></p> <br>
 			<strong>Cycling Confidence:</strong> <p id="cCONF"></p> <br>
-			<strong>Cycling history:</strong> <p id="cHIST"></p> <br> 
-			<strong>Mobile App Version: </strong> <p id="appVERSION"></p> <br>
-			<strong>Update Profile</strong>
+			<button type="button">Update Profile</button>
 		</div>
 		</div>			
 	</div>
@@ -95,6 +93,7 @@ getWorkZip();
 getSchoolZip();
 getEmail(10);
 getCycleFreq(10);
+getRiderType(10);
 
 //var data = JSON.parse(user);
 
