Can update mult fields now, success page

--- a/portal.html
+++ b/portal.html
@@ -34,7 +34,7 @@
 		<nav class ="g2">
 			<ul class="nav">
 				<ul><a href="portal.html">Home</a></ul>
-				<ul><a href="updateProfile.html">Update Profile</a></ul>
+				<ul><a href="updateProfile">Update Profile</a></ul>
 				<ul><a href="#Maps">View Your Maps</a></ul>
 				<ul><a href="#Logout">Log Out</a></ul>
 			</ul>
@@ -111,7 +111,7 @@ getTripData(user_id);
 
 
   document.getElementById("updateButton").onclick = function () {
-        location.href = "updateProfile.html";
+        location.href = "updateProfile";
     };
 
 </script>
