registering now works!

--- a/register.html
+++ b/register.html
@@ -4,6 +4,8 @@ Register a new user<br>
 <form action="index.php/register" method="post" name="myform">
 Email:
 <input name="email" value="none" /> <br>
+Password:
+<input name="password" value="password" /> <br>
 Gender:
 <input name="gender" value="1" /> <br>
 Income:
