--- a/tripMainView.html
+++ b/tripMainView.html
@@ -28,7 +28,7 @@
 	
 	<header>
 		<div class="g1">
-			<h2>Welcome!</h5> <!--figure out way to get user name in here -->
+			<h2>Trip View</h5> <!--figure out way to get user name in here -->
 			<!-- This will be a header menu, with options: update profile, maps, logout -->
 		</div>
 		<nav class ="g2">
@@ -40,38 +40,10 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="cf"></div>
-	<div id="content">
-		<div class="g1">
-			<h3>Notes</h3>
-			<p>Here we will display the most recent note a user posted, and a drop down to view other recent notes.</p>
-		</div>
-		<div class="g1">
-			<h3>Trips</h3>
-			<div>
-			<strong>Trip Purpose:</strong> <p id="tripPurpose">No data available</p> <strong>Trip Notes:</strong> <p id="tripNotes">No data available</p> 
-			<strong>Trip Start:</strong> <p id="tripStart"></p>
-			<strong>Trip End:</strong> <p id="tripEnd">No data available</p>
-			<strong>Trip Length:</strong> <p id="tripLength"></p> 
-			<strong>Select a different trip:</strong>
-			<select id="tripList" onchange="changeTripDetails(this)"></select><br>
-			<button type="button" id="tripInfoButton">Trips Main View</button>
-		</div>
-		</div>
-		<div class="g1">
-			<h3>User Data</h3>
-		<div>
-			<strong>Name:</strong> Chris <br>
-			<strong>Email:</strong> <p id="email"></p> <br>
-			<strong>Home Zipcode:</strong> <p id="hZIP"></p> <br>
-			<strong>Work Zipcode:</strong> <p id="wZIP"></p> <br>
-			<strong>School Zipcode:</strong> <p id="sZIP">No data available</p> <br>
-			<strong>Cycling Frequency:</strong> <p id="cFREQ"></p> <br>
-			<strong>Cycling Confidence:</strong> <p id="cCONF"></p> <br>
-			<button type="button" id="updateButton">Update Profile</button>
-		</div>
-		</div>			
-	</div>
+	
+	
+	
+
 	<footer class="g3 cf">
 		<small>2011 <span class="license">Created by <a href="http://twitter.com/thedayhascome">Josh Hopkins</a> <span class="amp">&amp;</span> <a href="http://40horse.com">40 Horse</a></span>. Released under <a href="http://unlicense.org">Unlicense</a>. </small>
 	</footer>
@@ -93,26 +65,3 @@
 	
 </body>
 </html>
-
-
-<script>
-var user_id = 10;
-getUserData(user_id);
-
-
-getTripData(user_id);
-
-
-//var data = JSON.parse(user);
-
-
-  document.getElementById("updateButton").onclick = function () {
-        location.href = "updateProfile";
-    };
-    
-     document.getElementById("tripInfoButton").onclick = function () {
-        location.href = "tripMainView";
-    };
-
-
-</script>
